# balllog-backend

./: Dockerfile  README.md  pyproject.toml  requirements.txt
config/: settings.py
matches/: admin.py  models.py
matches/migrations/: 0001_initial.py  0002_alter_match_type.py  0002_remove_match_email.py  0003_alter_match_type.py
