[tool.poetry]
name = "balllog-backend"
version = "0.1.0"
description = ""
authors = ["glen <dxm.glen@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "balllog_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
